--- a/style.css
+++ b/style.css
@@ -165,6 +165,10 @@ section {
     padding: 2rem;
 }
 
+.about .content .heading h1 {
+    padding-top: 2rem;
+}
+
 .about .row .content h2 {
     font-size: 4.5rem;
 }
