--- a/style.css
+++ b/style.css
@@ -210,7 +210,7 @@ section {
     font-size: 1.6rem;
 }
 
-.historia .content .a {
+.historia .content .d-grid gap-2 col-6 mx-auto .a {
 align-self: center;
 
 }
