--- a/style.css
+++ b/style.css
@@ -144,13 +144,13 @@ section {
     color: #fff;
 }
 
-.about .content a {
+.serviços .content a {
      margin: 0 1rem;
     font-size: 1.6rem;
     color: #000000;
 }
 
-.about .content a:hover {
+.serviços .content a:hover {
     color:#22ac00;
     border-bottom: 0.1rem solid #22ac00;
     padding-bottom: 0.5rem;
