--- a/style.css
+++ b/style.css
@@ -144,7 +144,7 @@ section {
     color: #fff;
 }
 
-.serviços .about .content .link a {
+.about .content .link a {
      margin: 0 1rem;
      padding-top: 15rem;
     font-size: 2rem;
@@ -152,7 +152,7 @@ section {
     text-decoration: underline;
 }
 
-.serviços .about .content .link a:hover {
+.about .content .link a:hover {
     color:#22ac00;
     border-bottom: 0.1rem solid #22ac00;
     padding-bottom: 0.5rem;
