--- a/style.css
+++ b/style.css
@@ -235,6 +235,11 @@ section {
     line-height: 1.8;
 }
 
+.detalhes .col {
+    padding-top: 5rem;
+    padding-bottom: 5rem;
+}
+
 .detalhes .col .card-title {
     font-size: 2rem;
 }
