--- a/style.css
+++ b/style.css
@@ -235,7 +235,7 @@ section {
     line-height: 1.8;
 }
 
-.detalhes .col {
+.detalhes .col .card {
     padding-top: 5rem;
     padding-bottom: 5rem;
 }
