--- a/style.css
+++ b/style.css
@@ -241,6 +241,7 @@ section {
 
 .detalhes .col .card-title {
     font-size: 2rem;
+    font-style:var(--main-color);
 }
 
 .detalhes .col .card-text {
