--- a/style.css
+++ b/style.css
@@ -256,6 +256,11 @@ section {
 
 /*AUTOMAÇÃO*/
 
+.carousel {
+    padding-top: 35rem;
+    padding-bottom: 35rem;
+}
+
 
 
 /*HISTÓRIA/QUEM SOMOS*/
