--- a/style.css
+++ b/style.css
@@ -240,8 +240,13 @@ section {
 }
 
 .container .card {
+    display: flex;
     padding-bottom: 5rem;
     padding-right: 50rem;
+}
+
+.container .card-body {
+    color: gray;
 }
 
 .container .card-body .card-title {
