--- a/style.css
+++ b/style.css
@@ -250,12 +250,13 @@ section {
 }
 
 .container .card-body .card-title {
-    font-size: 2rem;
+    font-size: 4rem;
     color: #0a0b32;
 }
 
 .container .card-body .card-text {
-    font-size: 1.6rem;
+    font-size: 2rem;
+    color: #000000;
 }
 
 
