--- a/style.css
+++ b/style.css
@@ -144,6 +144,12 @@ section {
     color: #fff;
 }
 
+.home .content .btn {
+    font-size: 1.6rem;
+    color: white;
+    background-color: #173424;
+}
+
 .about .content .link {
     color:#000000;
     font-size: 2rem;
