--- a/style.css
+++ b/style.css
@@ -107,7 +107,7 @@ section {
     min-height: 85vh;
     display: flex;
     align-items: center;
-    background-image: url("bannersite2.png");
+    background-image: url("img/placeholders and drawings/bannersite2.png");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
